syntax = "proto3";

import "google/protobuf/empty.proto";

package ReportRequestsGrpc;

service ReportRequestsService
{
  rpc GetReportResult (GetReportResultRequest) returns (GetReportResultResponse);
  rpc ProcessReportRequests  (google.protobuf.Empty) returns (google.protobuf.Empty);
}

message GetReportResultRequest {
  int64 request_id = 1;
}

message GetReportResultResponse {
  bool is_completed = 1;
  optional Report report = 2;

  message Report{
    double racio = 1;
    int32 payment_count = 2;
  }
}